Fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,13 @@
         padding: 2em;
         margin: 2em;
         overflow: hidden;
+    }
+    
+    #menu,
+    #header,
+    #units {
         position: relative;
+        z-index: 2;
     }
     
     .menu-container {
@@ -90,14 +96,16 @@
     #header {
         margin: 1.5em 0;
         text-align: center;
-        z-index: 2;
+    }
+    
+    #wrapper {
+        position: relative;
     }
     
     #units {
         display: flex;
         flex-direction: column;
         font-style: Roboto, sans-serif;
-        z-index: 2;
     }
     
     input[type=number] {
@@ -109,7 +117,6 @@
         font-weight: bold;
         padding: 0 1.5%;
         margin: 0.5em 0 1.5em 0;
-        z-index: 2;
     }
     
     label {
@@ -125,6 +132,7 @@
     #icon img {
         width: 600px;
         transform: rotate(-35deg);
+        opacity: 0.7;
     }
     
     footer {
